--- a/nodejs-demo-k8s/documents/about.html
+++ b/nodejs-demo-k8s/documents/about.html
@@ -50,7 +50,7 @@
 
     <div class="main">
         <h1>About us</h1>
-        <h2>Created by VietTQ-Devops</h2>
+        <h2>Created by k8s</h2>
 
     </div>
 
